# yu_agent

./: .gitignore  BUG_FIXES.md  CLAUDE.md  MCP_ISSUE_ANALYSIS.md  MCP_PARAMETER_FIX_COMPLETED.md  MCP_PARAMETER_FIX_FINAL_REPORT.md  MCP_PARAMETER_FIX_PLAN.md  PLAYWRIGHT_SOLUTION_COMPLETE.md  README.md  TERMINAL_TOOL_DOCUMENTATION.md  comprehensive_guide_part2.md  documentation_index.md  note_summary.txt  pyproject.toml  requirements.txt  setup.py  setup_dev_env.ps1  setup_dev_env.sh  test_parameter_fix.py  test_playwright_debug.py
description/: CLEANUP_COMPLETE.md  DOCUMENTATION.md  comprehensive_guide_part1.md  项目概述.md
learn_PDF/: PDFLearningAssistant.py
src/yu_agent/: __init__.py  version.py
src/yu_agent/agents/: plan_solve_agent.py  react_agent.py  reflection_agent.py  simple_agent.py
src/yu_agent/context/: builder.py
src/yu_agent/core/: __init__.py  config.py  database_config.py  message.py
src/yu_agent/memory/: manager.py
src/yu_agent/memory/storage/: __init__.py  neo4j_store.py
src/yu_agent/memory/types/: semantic.py  working.py
src/yu_agent/protocols/: __init__.py
src/yu_agent/protocols/mcp/: selenium_http_client.py  selenium_http_server.py  selenium_mcp_server.py  selenium_server.py
src/yu_agent/tools/: __init__.py  base.py  chain.py  mcp_wrapper_tool.py  protocol_tools.py  registry.py  selenium_screenshot.py
src/yu_agent/tools/builtin/: __init__.py  cross_platform_terminal.py  memory_tool.py  rag_tool.py  terminal_tool.py
test_the_yu_agent/: test.py  test_memory.py  test_rag.py
test_the_yu_agent/memory_data/: memory.db
tests/test_context/: test.py
yu_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
yu_agent/agents/: __init__.py
yu_agent/core/: agent.py
yu_agent/memory/: base.py  embedding.py
yu_agent/memory/storage/: qdrant_store.py
yu_agent/memory/types/: episodic.py  perceptual.py
yu_agent/tools/builtin/: __init__.py  calculator.py  search.py
