[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yu_agent"
version = "0.1.2"
description = "学习阶段的 Agent 框架实现，基于 Hello Agents 教科书，补充了 Memory 和 RAG 相关的实现"
readme = "readme.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Zhuoyang Wu", email = "xiaoyu-ops@github.com"}
]
keywords = ["agent", "llm", "rag", "memory", "openai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "openai==2.18.0",
    "pydantic==2.12.5",
    "tavily==1.1.0",
    "tavily_python==0.7.19",
    "serpapi==0.1.5",
    "google_search_results==2.4.2",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
memory = [
    "qdrant-client>=2.7.0",
    "neo4j>=5.13.0",
    "scikit-learn>=1.3.0",
    "sentence-transformers>=2.2.0",
    "dashscope>=1.0.0",
    "spacy>=3.7.0",
]

search = [
    "tavily-python>=0.7.0",
    "google_search_results>=2.4.0",
]

dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]

[project.urls]
Homepage = "https://github.com/xiaoyu-ops/yu_agent"
Repository = "https://github.com/xiaoyu-ops/yu_agent.git"
Documentation = "https://github.com/xiaoyu-ops/yu_agent#readme"
Issues = "https://github.com/xiaoyu-ops/yu_agent/issues"

[tool.setuptools]
packages = ["yu_agent"]

[tool.setuptools.package-data]
yu_agent = ["py.typed"]

[tool.setuptools.package-dir]
"" = "src"

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # 目录
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 100
target-version = "py310"
select = [
    "E",      # pycodestyle 错误
    "W",      # pycodestyle 警告
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
]
ignore = [
    "E501",   # 行太长
    "W503",   # 在二元操作符前换行
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true
ignore_missing_imports = true
